--- a/app/src/main/res/layout/position_fragment.xml
+++ b/app/src/main/res/layout/position_fragment.xml
@@ -10,13 +10,13 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/darker_gray">
+        android:background="#373A48">
 
         <ImageView
             android:id="@+id/img"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@android:color/holo_blue_light"
+            android:background="#00CBCB"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
